--- a/config/database.yml
+++ b/config/database.yml
@@ -4,55 +4,57 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem "sqlite3"
 #
-default: &default
+default_sqlite: &default_sqlite
   adapter: sqlite3
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
+default_pg: &default_pg
+  adapter: postgresql
+  encoding: unicode
+  pool: <%= ENV.fetch("DATABASE_POOL_SIZE", 5) %>
+  host: <%= ENV.fetch("POSTGRES_HOST", "127.0.0.1") %>
+  port: <%= ENV.fetch("POSTGRES_PORT", "5432") %>
+  database: <%= ENV.fetch("POSTGRES_DATABASE", "insights-db") %>
+  username: <%= ENV.fetch("POSTGRES_USER", "insights-user") %>
+  password: <%= ENV.fetch("POSTGRES_PASSWORD", "insights-pass") %>
+
 development:
-  <<: *default
+  <<: *default_sqlite
   database: storage/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
+  <<: *default_sqlite
   database: storage/test.sqlite3
 
 # Store staging database in the storage/ directory
 staging:
   primary:
-    <<: *default
-    database: storage/staging.sqlite3
+    <<: *default_pg
   cache:
-    <<: *default
-    database: storage/staging_cache.sqlite3
+    <<: *default_pg
     migrations_paths: db/cache_migrate
   queue:
-    <<: *default
-    database: storage/staging_queue.sqlite3
+    <<: *default_pg
     migrations_paths: db/queue_migrate
   cable:
-    <<: *default
-    database: storage/staging_cable.sqlite3
+    <<: *default_pg
     migrations_paths: db/cable_migrate
 
 # Store production database in the storage/ directory, which by default
 # is mounted as a persistent Docker volume in config/deploy.yml.
 production:
   primary:
-    <<: *default
-    database: storage/production.sqlite3
+    <<: *default_pg
   cache:
-    <<: *default
-    database: storage/production_cache.sqlite3
+    <<: *default_pg
     migrations_paths: db/cache_migrate
   queue:
-    <<: *default
-    database: storage/production_queue.sqlite3
+    <<: *default_pg
     migrations_paths: db/queue_migrate
   cable:
-    <<: *default
-    database: storage/production_cable.sqlite3
+    <<: *default_pg
     migrations_paths: db/cable_migrate
