Add support for episode categories

--- a/db/data_schema/dimensions.yml
+++ b/db/data_schema/dimensions.yml
@@ -342,3 +342,15 @@ Dimensions:
       RequiredColumns:
         downloads: [feeder_feed]
       Type: STRING
+  categories:
+    Type: Token
+    QueryKey: category
+    StaticFields: []
+    MetricAggregations:
+      Sum: []
+    PermitNulls: true
+    BigQuery:
+      Selector: episode_category
+      RequiredColumns:
+        episode_category: []
+      Type: STRING
