--- a/config/database.yml
+++ b/config/database.yml
@@ -52,9 +52,12 @@ production:
   cache:
     <<: *default_pg
     migrations_paths: db/cache_migrate
+    database: <%= ENV.fetch("POSTGRES_DATABASE", "insights") %>_cache
   queue:
     <<: *default_pg
     migrations_paths: db/queue_migrate
+    database: <%= ENV.fetch("POSTGRES_DATABASE", "insights") %>_queue
   cable:
     <<: *default_pg
     migrations_paths: db/cable_migrate
+    database: <%= ENV.fetch("POSTGRES_DATABASE", "insights") %>_cable
