--- a/.erb_lint.yml
+++ b/.erb_lint.yml
@@ -1,3 +1,30 @@
 ---
+EnableDefaultLinters: true
 exclude:
   - "**/*.sql.erb"
+linters:
+  Rubocop:
+    enabled: true
+    rubocop_config:
+      # We override some standardrb cop settings when linting ERB files
+      # because they are impractical or impossible to enforce
+      inherit_from:
+        - .rubocop.yml
+      Layout/InitialIndentation:
+        Enabled: false
+      Layout/LineLength:
+        Enabled: false
+      Layout/LeadingEmptyLines:
+        Enabled: false
+      Layout/TrailingEmptyLines:
+        Enabled: false
+      Layout/TrailingWhitespace:
+        Enabled: false
+      Naming/FileName:
+        Enabled: false
+      Style/FrozenStringLiteralComment:
+        Enabled: false
+      Lint/UselessAssignment:
+        Enabled: false
+      Rails/OutputSafety:
+        Enabled: false
