--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,7 +3,10 @@ updates:
   - package-ecosystem: bundler
     directory: "/"
     schedule:
-      interval: "daily"
-    versioning-strategy: lockfile-only
-    allow:
-      - dependency-name: "rails"
+      interval: daily
+    open-pull-requests-limit: 10
+  - package-ecosystem: github-actions
+    directory: "/"
+    schedule:
+      interval: daily
+    open-pull-requests-limit: 10
