Add rudimentary filter selector

--- a/db/data_schema/dimensions.yml
+++ b/db/data_schema/dimensions.yml
@@ -332,7 +332,9 @@ Dimensions:
   feed:
     Type: Token
     QueryKey: feed
-    StaticFields: []
+    StaticFields:
+      - podcast_id
+      - podcast_name
     MetricAggregations:
       Sum:
         - count(downloads)
